# FileTag

./: .gitignore  CMakeLists.txt  FileSearch.h  FileSearchCore.cpp  FileSearchCore.h  LICENSE  README.md  about.ui  bug.md  main.cpp  tagger  tags.csv
Filetest/: CreateFile.py
resources/: resources.qrc  stylesheet.qss
src/: AbstractDatabase.cpp  AbstractDatabase.h  CustomModel.cpp  CustomModel.h  DatabaseThread.cpp  DatabaseThread.h  FileDatabase.cpp  FileDatabase.h  FileIndexDatabase.cpp  FileIndexDatabase.h  FileProcessor.cpp  FileProcessor.h  FileSearch.cpp  FileSearch.h  FileSearch.ui  FileSearchCore.cpp  FileSearchCore.h  FileSearchThread.cpp  FileSearchThread.h  FileTagSystem.cpp  FileTagSystem.h  FileTransfer.cpp  FileTransfer.h  FileTransfer.ui  Logger.cpp  Logger.h  MultiSelectDialog.cpp  MultiSelectDialog.h  TagController.cpp  TagController.h  TagManager.cpp  TagManager.h  UserManager.cpp  UserManager.h  about.cpp  about.h  about.ui  file_tag_system.cpp  file_tag_system.h  filesearch.cpp  (+8 more)
